--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>MY PORTFOLIO</title>
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="./style.css">
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
@@ -38,7 +38,7 @@
 	<div class="max-width">
 		<div class="home-content">
 			<div class="text-1"> Hello, my name is</div>
-			<div class="text-2"> Anusha Peddoju</div>
+			<div class="text-2"> Sadhak kacheri</div>
 			<div class="text-3"> and I'm a <span class="typing"></span></div>
 			
 		</div>
@@ -50,7 +50,7 @@
 		<h2 class="title">About me</h2>
 		<div class="about-content">
 			<div class="column left">
-				<img src="anusha.png">
+				<img src="./sadhak.jpg">
 			</div>
 			<div class="coloumn right">
 			<div class="text"> My name is Sadhak,</div>
@@ -173,10 +173,10 @@
 					</div>
 				</div>
 				<div class="apps">                          
-			          	 <a href="https://www.linkedin.com/in/anusha-peddoju-945a7320b/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-                           		<a href="https://github.com/anusha-peddoju" target="_blank"><i class="fab fa-github"></i></a>
-                         		<a href="https://www.instagram.com/anusha_peddoju/" target="_blank"><i class="fab fa-instagram"></i></a>
-								<a href="https://leetcode.com/anushapeddoju/" target="_blank">
+			          	 <a href="https://www.linkedin.com/in/kacheri-sadak-874350246" target="_blank"><i class="fab fa-linkedin-in"></i></a>
+                           		<a href="https://github.com/Sadhakk" target="_blank"><i class="fab fa-github"></i></a>
+                         		<a href="https://www.instagram.com/sadhak_1610/" target="_blank"><i class="fab fa-instagram"></i></a>
+								
 									<svg role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" id="IconChangeColor" height="25" width="25"><title>LeetCode</title><path d="M13.483 0a1.374 1.374 0 0 0-.961.438L7.116 6.226l-3.854 4.126a5.266 5.266 0 0 0-1.209 2.104 5.35 5.35 0 0 0-.125.513 5.527 5.527 0 0 0 .062 2.362 5.83 5.83 0 0 0 .349 1.017 5.938 5.938 0 0 0 1.271 1.818l4.277 4.193.039.038c2.248 2.165 5.852 2.133 8.063-.074l2.396-2.392c.54-.54.54-1.414.003-1.955a1.378 1.378 0 0 0-1.951-.003l-2.396 2.392a3.021 3.021 0 0 1-4.205.038l-.02-.019-4.276-4.193c-.652-.64-.972-1.469-.948-2.263a2.68 2.68 0 0 1 .066-.523 2.545 2.545 0 0 1 .619-1.164L9.13 8.114c1.058-1.134 3.204-1.27 4.43-.278l3.501 2.831c.593.48 1.461.387 1.94-.207a1.384 1.384 0 0 0-.207-1.943l-3.5-2.831c-.8-.647-1.766-1.045-2.774-1.202l2.015-2.158A1.384 1.384 0 0 0 13.483 0zm-2.866 12.815a1.38 1.38 0 0 0-1.38 1.382 1.38 1.38 0 0 0 1.38 1.382H20.79a1.38 1.38 0 0 0 1.38-1.382 1.38 1.38 0 0 0-1.38-1.382z" id="mainIconPathAttribute" fill="#f24040" stroke-width="0" stroke="#ff0000"></path></svg>
 								</a>
                         </div>
@@ -209,8 +209,8 @@
 </section>
 <!-- footer section start -->
 <footer>
-	<span><span class="far fa-copyright"></span>Created By <a href="#">Anusha Peddoju</a></span>
+	<span><span class="far fa-copyright"></span>Created By <a href="#">Sadhak smart</a></span>
 </footer>
-<script src="script.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
